# pydantic-notes

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  README.md  justfile  pyproject.toml
.github/workflows/: actions.yaml
tests/aliasing/: conftest.py  test_combination_aliases.py  test_plain_alias.py  test_serialization_alias.py  test_validation_alias.py
